schedule grid page

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,7 @@
 				<a href="/"><img src="/images/logo.png" alt="logo" /></a>
 				<ul>
 					<li><a href="#">About</a></li>
-					<li><a href="#">Schedule</a></li>
+					<li><a href="{{ path('wyur_shows_default_schedule') }}">Schedule</a></li>
 					<li><a href="#">Shows</a></li>
 					<li><a href="#">Listen</a></li>
 				</ul>
