--- a/src/WYUR/ShowsBundle/Resources/views/Default/schedule.html.twig
+++ b/src/WYUR/ShowsBundle/Resources/views/Default/schedule.html.twig
@@ -3,22 +3,24 @@
 {% block title %}My cool page{% endblock %}
 
 {% block body %}
-	<table>
+	<h1>Schedule</h1>
+	<table id="schedule">
 		<tr>
-			<th></th>
+			<th id="corner"></th>
 			{% for day in days %}
-				<th>{{ day.name }}</th>
+				<th id="day">{{ day.name }}</th>
 			{% endfor %}
 		</tr>
     {% for hour in hours %}
 		<tr>
-			<td>{{ hour.name }}</td>
+			<th id="time">{{ hour.name }}</th>
 			{% for slot in hour.slots %}
 				{% if slot.show == null %}
-					<td>emtpy</td>
+					<td></td>
 				{% else %}
 					<td>
 						<a href="{{ path('wyur_shows_default_show', {'slug': slot.show.slug}) }}">
+							<img src="{{ vich_uploader_asset(slot.show, 'imageFile') }}" alt="{{ slot.show.name }} image" />
 							{{ slot.show.name }}
 						</a>
 					</td>
