--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,7 +18,7 @@
 				<ul>
 					<li><a href="#">About</a></li>
 					<li><a href="{{ path('wyur_shows_default_schedule') }}">Schedule</a></li>
-					<li><a href="#">Shows</a></li>
+					<li><a href="{{ path('wyur_shows_default_schedulelist') }}">Shows</a></li>
 					<li><a href="#">Listen</a></li>
 				</ul>
 			</div>
