page titles (closes #2)

--- a/src/WYUR/ShowsBundle/Resources/views/Default/schedule.html.twig
+++ b/src/WYUR/ShowsBundle/Resources/views/Default/schedule.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}My cool page{% endblock %}
+{% block title %}Show Schedule{% endblock %}
 
 {% block body %}
 	<h1>Schedule</h1>
