--- a/src/WYUR/ShowsBundle/Resources/views/Default/show.html.twig
+++ b/src/WYUR/ShowsBundle/Resources/views/Default/show.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}My cool page{% endblock %}
+{% block title %}{{ show.name }}{% endblock %}
 
 {% block body %}
 	<h1>{{ show.name }}</h1>
