--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>WYUR - {% block title %}Welcome!{% endblock %}</title>
 		<link rel="icon" type="image/png" href="/images/favicon.png">
 		<link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
 		<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
