--- a/src/WYUR/ShowsBundle/Resources/views/Default/scheduleList.html.twig
+++ b/src/WYUR/ShowsBundle/Resources/views/Default/scheduleList.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}My cool page{% endblock %}
+{% block title %}Show List{% endblock %}
 
 {% block body %}
 	<h1>Shows</h1>
