--- a/src/WYUR/PageBundle/Resources/views/Default/listen.html.twig
+++ b/src/WYUR/PageBundle/Resources/views/Default/listen.html.twig
@@ -1,7 +1,15 @@
-{% extends '::base.html.twig' %}
-
-{% block title %}{{ page.title }}{% endblock %}
-
-{% block body %}
-    {{ page.content|raw }}
-{% endblock %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>WYUR - Listen</title>
+		<link rel="icon" type="image/png" href="/images/favicon.png">
+    </head>
+    <body>
+        <div id="container">
+			<div id="main">
+				<span>Player goes here</span>
+			</div>
+		</div>
+    </body>
+</html>
