--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,3 +1,7 @@
+.clear	{
+	clear: both;
+}
+
 a	{
 	color: inherit;
 	text-decoration: inherit;
@@ -112,11 +116,44 @@ table#schedule img	{
 	display: block;
 }
 
-
+#showMain	{
+	width: 720px;
+	margin-left: auto;
+	margin-right: auto;
+	line-height: 1.5em;
+}
+#showMain strong	{
+	font-size: 24px;
+	display: block;
+	font-weight: bold;
+	text-transform: uppercase;
+}
+#showTop	{
+	padding-bottom: 30px;
+}
 #showTop img	{
 	float: left;
 	width: 260px;
 	height: 260px;
+	padding-right: 30px;
+}
+#showTop strong	{
+	margin-top: 15px;
+	margin-bottom: 10px;
+}
+#showDescription	{
+	padding-bottom: 30px;
+	font-size: 14px;
+}
+#showDescription strong	{
+	display: inline;
+	font-size: inherit;
+}
+#showPlayer strong	{
+	font-size: 14px;
+}
+#showPlayer iframe	{
+	margin-top: 10px;
 }
 
 
