--- a/src/WYUR/PageBundle/Resources/views/Default/about.html.twig
+++ b/src/WYUR/PageBundle/Resources/views/Default/about.html.twig
@@ -3,5 +3,8 @@
 {% block title %}{{ page.title }}{% endblock %}
 
 {% block body %}
-    {{ page.content|raw }}
+	<h1>{{ page.title }}</h1>
+	<div id="cmsPage">
+		{{ page.content|raw }}
+	</div>
 {% endblock %}
