--- a/src/WYUR/PageBundle/Resources/views/Default/listen.html.twig
+++ b/src/WYUR/PageBundle/Resources/views/Default/listen.html.twig
@@ -18,6 +18,7 @@
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  })();
 		</script>
+		<script>document.title = 'WYUR Player';</script>
     </head>
     <body>
 		<img alt="logo" src="/images/logo.png">
