Fixed favicon & modified user form to enable users by default

--- a/src/WYUR/PageBundle/Resources/views/Default/listen.html.twig
+++ b/src/WYUR/PageBundle/Resources/views/Default/listen.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>WYUR - Listen</title>
-		<link rel="icon" type="image/png" href="/images/favicon.png">
+		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	
 		<link href="/css/player.css" rel="stylesheet" media="screen">
 		
