--- a/src/WYUR/ShowsBundle/Resources/views/Default/schedule.html.twig
+++ b/src/WYUR/ShowsBundle/Resources/views/Default/schedule.html.twig
@@ -20,7 +20,11 @@
 				{% else %}
 					<td>
 						<a href="{{ path('wyur_shows_default_show', {'slug': slot.show.slug}) }}">
-							<img src="{{ vich_uploader_asset(slot.show, 'imageFile') }}" alt="{{ slot.show.name }} image" />
+							{% if slot.show.imageFile == '/srv/www/wyur/app/../web/images/shows/showDefault.png' %}
+								<img src="/images/showDefault.png" alt="{{ slot.show.name }} image" />
+							{% else %}
+								<img src="{{ vich_uploader_asset(slot.show, 'imageFile') }}" alt="{{ slot.show.name }} image" />
+							{% endif %}
 							{{ slot.show.name }}
 						</a>
 					</td>
