New pages in header & schedule fix

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,6 +30,8 @@
 					<li><a href="{{ path('about') }}">About</a></li>
 					<li><a href="{{ path('wyur_shows_default_schedule') }}">Schedule</a></li>
 					<li><a href="{{ path('wyur_shows_default_schedulelist') }}">Shows</a></li>
+					<li><a href="/page/staff">Staff</a></li>
+					<li><a href="/page/contact">Contact</a></li>
 					<li><a href="javascript:void(0);" onclick="openPlayer('{{ path('listen') }}')">Listen</a></li>
 				</ul>
 			</div>
